// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`:border 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: absolute;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 10px;
  color: #000000;
  background-color: transparent;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 0px;
  bottom: 0px;
  left: 0px;
  right: 0px;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 > div:first-of-type {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  box-sizing: border-box;
  border: solid 5px #000000;
}

.c0 > div:first-of-type > video {
  width: unset;
  -webkit-filter: blur(0px);
  filter: blur(0px);
  object-fit: unset;
}

<div
  className="c0"
  controls={true}
  loop={false}
  muted={false}
  src="/video/video.mp4"
>
  <div>
    <video
      alt="video.mp4"
      autoPlay={false}
      controls={true}
      loop={false}
      muted={false}
      title="video"
    >
      HTML5 video unsupported by your browser
      <source
        src="/video/video.mp4"
        type="video/mp4"
      />
    </video>
  </div>
  <div
    className="c1"
  >
    Hello
  </div>
</div>
`;

exports[`:border 2`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 > div:first-of-type {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  box-sizing: border-box;
  border: dashed 2px red;
}

.c0 > div:first-of-type > video {
  width: unset;
  -webkit-filter: blur(0px);
  filter: blur(0px);
  object-fit: unset;
}

<div
  className="c0"
  controls={true}
  loop={false}
  muted={false}
  src="/video/video.mp4"
>
  <div>
    <video
      alt="video.mp4"
      autoPlay={false}
      controls={true}
      loop={false}
      muted={false}
      title="video"
    >
      HTML5 video unsupported by your browser
      <source
        src="/video/video.mp4"
        type="video/mp4"
      />
    </video>
  </div>
</div>
`;

exports[`:filter 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 > div:first-of-type {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
}

.c0 > div:first-of-type > video {
  width: unset;
  -webkit-filter: blur(5px);
  filter: blur(5px);
  object-fit: unset;
}

<div
  className="c0"
  controls={true}
  loop={false}
  muted={false}
  src="/video/video.mp4"
>
  <div>
    <video
      alt="video.mp4"
      autoPlay={false}
      controls={true}
      loop={false}
      muted={false}
      title="video"
    >
      HTML5 video unsupported by your browser
      <source
        src="/video/video.mp4"
        type="video/mp4"
      />
    </video>
  </div>
</div>
`;

exports[`:height & :width 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 500px;
}

.c0 > div:first-of-type {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  height: 200px;
}

.c0 > div:first-of-type > video {
  width: unset;
  -webkit-filter: blur(0px);
  filter: blur(0px);
  object-fit: unset;
}

<div
  className="c0"
  controls={true}
  height="200px"
  loop={false}
  muted={false}
  src="/video/video.mp4"
  width="500px"
>
  <div>
    <video
      alt="video.mp4"
      autoPlay={false}
      controls={true}
      loop={false}
      muted={false}
      title="video"
    >
      HTML5 video unsupported by your browser
      <source
        src="/video/video.mp4"
        type="video/mp4"
      />
    </video>
  </div>
</div>
`;

exports[`:height & :width 2`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 > div:first-of-type {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  height: 200px;
}

.c0 > div:first-of-type > video {
  width: unset;
  -webkit-filter: blur(0px);
  filter: blur(0px);
  object-fit: unset;
}

<div
  className="c0"
  controls={true}
  height="200px"
  loop={false}
  muted={false}
  src="/video/video.mp4"
>
  <div>
    <video
      alt="video.mp4"
      autoPlay={false}
      controls={true}
      loop={false}
      muted={false}
      title="video"
    >
      HTML5 video unsupported by your browser
      <source
        src="/video/video.mp4"
        type="video/mp4"
      />
    </video>
  </div>
</div>
`;

exports[`:height & :width 3`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 500px;
}

.c0 > div:first-of-type {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
}

.c0 > div:first-of-type > video {
  width: unset;
  -webkit-filter: blur(0px);
  filter: blur(0px);
  object-fit: unset;
}

<div
  className="c0"
  controls={true}
  loop={false}
  muted={false}
  src="/video/video.mp4"
  width="500px"
>
  <div>
    <video
      alt="video.mp4"
      autoPlay={false}
      controls={true}
      loop={false}
      muted={false}
      title="video"
    >
      HTML5 video unsupported by your browser
      <source
        src="/video/video.mp4"
        type="video/mp4"
      />
    </video>
  </div>
</div>
`;

exports[`:object-fit 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 > div:first-of-type {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
}

.c0 > div:first-of-type > video {
  width: unset;
  -webkit-filter: blur(0px);
  filter: blur(0px);
  object-fit: unset;
}

<div
  className="c0"
  controls={true}
  loop={false}
  muted={false}
  src="/video/video.mp4"
>
  <div>
    <video
      alt="video.mp4"
      autoPlay={false}
      controls={true}
      loop={false}
      muted={false}
      title="video"
    >
      HTML5 video unsupported by your browser
      <source
        src="/video/video.mp4"
        type="video/mp4"
      />
    </video>
  </div>
</div>
`;

exports[`:object-fit 2`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 > div:first-of-type {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
}

.c0 > div:first-of-type > video {
  width: 100%;
  -webkit-filter: blur(0px);
  filter: blur(0px);
  object-fit: cover;
}

<div
  className="c0"
  controls={true}
  loop={false}
  muted={false}
  src="/video/video.mp4"
>
  <div>
    <video
      alt="video.mp4"
      autoPlay={false}
      controls={true}
      loop={false}
      muted={false}
      title="video"
    >
      HTML5 video unsupported by your browser
      <source
        src="/video/video.mp4"
        type="video/mp4"
      />
    </video>
  </div>
</div>
`;

exports[`:object-fit 3`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 > div:first-of-type {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
}

.c0 > div:first-of-type > video {
  width: 100%;
  -webkit-filter: blur(0px);
  filter: blur(0px);
  object-fit: contain;
}

<div
  className="c0"
  controls={true}
  loop={false}
  muted={false}
  src="/video/video.mp4"
>
  <div>
    <video
      alt="video.mp4"
      autoPlay={false}
      controls={true}
      loop={false}
      muted={false}
      title="video"
    >
      HTML5 video unsupported by your browser
      <source
        src="/video/video.mp4"
        type="video/mp4"
      />
    </video>
  </div>
</div>
`;

exports[`:object-fit 4`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 > div:first-of-type {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
}

.c0 > div:first-of-type > video {
  width: 100%;
  -webkit-filter: blur(0px);
  filter: blur(0px);
  object-fit: fill;
}

<div
  className="c0"
  controls={true}
  loop={false}
  muted={false}
  src="/video/video.mp4"
>
  <div>
    <video
      alt="video.mp4"
      autoPlay={false}
      controls={true}
      loop={false}
      muted={false}
      title="video"
    >
      HTML5 video unsupported by your browser
      <source
        src="/video/video.mp4"
        type="video/mp4"
      />
    </video>
  </div>
</div>
`;

exports[`:object-fit 5`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 > div:first-of-type {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
}

.c0 > div:first-of-type > video {
  width: unset;
  -webkit-filter: blur(0px);
  filter: blur(0px);
  object-fit: unset;
}

<div
  className="c0"
  controls={true}
  loop={false}
  muted={false}
  src="/video/video.mp4"
>
  <div>
    <video
      alt="video.mp4"
      autoPlay={false}
      controls={true}
      loop={false}
      muted={false}
      title="video"
    >
      HTML5 video unsupported by your browser
      <source
        src="/video/video.mp4"
        type="video/mp4"
      />
    </video>
  </div>
</div>
`;

exports[`:overlay 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: absolute;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 10px;
  color: #000000;
  background-color: transparent;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 0px;
  bottom: 0px;
  left: 0px;
  right: 0px;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 > div:first-of-type {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
}

.c0 > div:first-of-type > video {
  width: unset;
  -webkit-filter: blur(0px);
  filter: blur(0px);
  object-fit: unset;
}

<div
  className="c0"
  controls={true}
  loop={false}
  muted={false}
  src="/video/video.mp4"
>
  <div>
    <video
      alt="video.mp4"
      autoPlay={false}
      controls={true}
      loop={false}
      muted={false}
      title="video"
    >
      HTML5 video unsupported by your browser
      <source
        src="/video/video.mp4"
        type="video/mp4"
      />
    </video>
  </div>
  <div
    className="c1"
  >
    Hello
  </div>
</div>
`;

exports[`:overlay 2`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: absolute;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 10px;
  color: #ECEFF1;
  background-color: rgba(0,0,0,0.7);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 0px;
  bottom: 0px;
  left: 0px;
  right: 0px;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 > div:first-of-type {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
}

.c0 > div:first-of-type > video {
  width: unset;
  -webkit-filter: blur(0px);
  filter: blur(0px);
  object-fit: unset;
}

<div
  className="c0"
  controls={true}
  loop={false}
  muted={false}
  src="/video/video.mp4"
>
  <div>
    <video
      alt="video.mp4"
      autoPlay={false}
      controls={true}
      loop={false}
      muted={false}
      title="video"
    >
      HTML5 video unsupported by your browser
      <source
        src="/video/video.mp4"
        type="video/mp4"
      />
    </video>
  </div>
  <div
    className="c1"
  />
</div>
`;

exports[`:rounded 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 > div:first-of-type {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  border-radius: 5px;
}

.c0 > div:first-of-type > video {
  width: unset;
  -webkit-filter: blur(0px);
  filter: blur(0px);
  object-fit: unset;
}

<div
  className="c0"
  controls={true}
  loop={false}
  muted={false}
  src="/video/video.mp4"
>
  <div>
    <video
      alt="video.mp4"
      autoPlay={false}
      controls={true}
      loop={false}
      muted={false}
      title="video"
    >
      HTML5 video unsupported by your browser
      <source
        src="/video/video.mp4"
        type="video/mp4"
      />
    </video>
  </div>
</div>
`;

exports[`:src 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 > div:first-of-type {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
}

.c0 > div:first-of-type > video {
  width: unset;
  -webkit-filter: blur(0px);
  filter: blur(0px);
  object-fit: unset;
}

<div
  className="c0"
  controls={true}
  loop={false}
  muted={false}
  src="/video/video.mp4"
>
  <div>
    <video
      alt="video.mp4"
      autoPlay={false}
      controls={true}
      loop={false}
      muted={false}
      title="video"
    >
      HTML5 video unsupported by your browser
      <source
        src="/video/video.mp4"
        type="video/mp4"
      />
    </video>
  </div>
</div>
`;
